--- a/HTML & CSS - Figma/wo media  queries/about.html
+++ b/HTML & CSS - Figma/wo media  queries/about.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="media_queries.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>Contact Us</title>
+    <title>About Us</title>
 </head>
 <body>
     <header>
@@ -14,7 +13,7 @@
             <div class="header-leftside">
                 <img src="./img/Logo.png" alt="Company Logo">
                 <a href="home.html">Home</a>
-
+                
                 <div class="dropdown">
                     <a class="droplink" href="">Shop <img src="./img/Arrow-Down.png" alt=""></a>
                     <div class="dropdown-content">
@@ -36,25 +35,20 @@
         </div>
     </header>
 
-
-    <div class="contact-div">
-        <img src="./img/Photo7.png" alt="">
-
-        <div class="right-side">
-            <h2>Contact Us</h2>
-            <form action="">
-                <!-- FOR SUBMITING FORM -->
-                <!-- <button class="SUBMIT-BUTTON" type="submit"><img style="width: 50px;" src="./img/SENDicon.PNG" alt=""></button> -->
-
-                <input type="name" name="Name" id="" placeholder="Name*" required>
-                <input type="email" name="Email" id="" placeholder="Email*" required>
-                <textarea name="Message" id="" cols="" rows="" placeholder="Text Us..." required></textarea>
-            </form>
+    <div class="about-div">
+        <div class="about-photo">
+            <img src="./img/Photo6.png" alt="">
         </div>
 
-
-
+        <div class="about-text">
+            <article>
+                <p>Massai is an online store founded by two georgian friends and its idea originates from childhood. We offer hair accessories, African braids, feather headbands, necklaces, bracelets, eyeglass holders and key rings.</p>
+                <p>As for the name of the startup, "Massai" is an African tribe whose members are distinguished by colorful accessories. Our inspiration also came from them.</p>
+                <p>Our goal was to adapt to all segments, because we think that every person needs to express himself, and we will be very happy if the colorful accessories of "Massai" help you in this.</p>
+            </article>
+         </div>
     </div>
+
 
 
     <footer>
@@ -83,6 +77,6 @@
 
             </div>
         </div>
-    </footer>   
+    </footer>    
 </body>
 </html>
