--- a/HTML & CSS - Figma/wo media  queries/home.html
+++ b/HTML & CSS - Figma/wo media  queries/home.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="media_queries.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>Contact Us</title>
+    <title>Welcome</title>
+<!--     
+    FIGMA Link:
+    https://www.figma.com/file/dOyGAbDeGpVttduXvYQ7P8/Tsiklauri-Lina?type=design&node-id=6-290&mode=design&t=dRHQrz0Ysqn5h1sP-0
+ -->
 </head>
 <body>
     <header>
@@ -14,7 +17,7 @@
             <div class="header-leftside">
                 <img src="./img/Logo.png" alt="Company Logo">
                 <a href="home.html">Home</a>
-
+                
                 <div class="dropdown">
                     <a class="droplink" href="">Shop <img src="./img/Arrow-Down.png" alt=""></a>
                     <div class="dropdown-content">
@@ -36,25 +39,45 @@
         </div>
     </header>
 
+        <div class="main1">
+            <div class="main1-left">
+                <h3>Express yourself with handmade accessories from Massai</h3>
+                <a href=""><button>Shop Now</button></a>
+            </div>
 
-    <div class="contact-div">
-        <img src="./img/Photo7.png" alt="">
-
-        <div class="right-side">
-            <h2>Contact Us</h2>
-            <form action="">
-                <!-- FOR SUBMITING FORM -->
-                <!-- <button class="SUBMIT-BUTTON" type="submit"><img style="width: 50px;" src="./img/SENDicon.PNG" alt=""></button> -->
-
-                <input type="name" name="Name" id="" placeholder="Name*" required>
-                <input type="email" name="Email" id="" placeholder="Email*" required>
-                <textarea name="Message" id="" cols="" rows="" placeholder="Text Us..." required></textarea>
-            </form>
+            <img src="./img/Photo1.png" alt="">
         </div>
 
+        <div class="main2">
+            <h3>Our Products</h3> 
+            <div class="products-div">
+                <div class="product1">
+                    <img src="./img/Photo2.png" alt="">
+                    <a href="">Hair Stick<img src="./img/Arrow-Right.png" alt=""></a>
+                </div>
 
+                <div class="product2">
+                    <img src="./img/Photo3.png" alt="">
+                    <a href="">Earrings<img src="./img/Arrow-Right.png" alt=""></a>
+                </div>
 
-    </div>
+                <div class="product3">
+                    <img src="./img/Photo4.png" alt="">
+                    <a href="">Hair Braid<img src="./img/Arrow-Right.png" alt=""></a>
+                </div>
+            </div>
+            <a href=""><button>Load More</button></a>
+        </div>
+
+        <div class="main3">
+            <img src="./img/Photo5.png" alt="">
+            <div class="shop-div">
+                <h3>Choose a color according to your inner world and make it an accessory with Massai</h3>
+                <a href=""><button>Shop Now</button></a>
+
+            </div>
+        </div>
+
 
 
     <footer>
@@ -83,6 +106,6 @@
 
             </div>
         </div>
-    </footer>   
+    </footer>
 </body>
 </html>
